Game Completed Nicely.

--- a/JS Mini Project/SimonGame/style.css
+++ b/JS Mini Project/SimonGame/style.css
@@ -21,19 +21,27 @@ body{
     text-align: center;
 }
 
-#box1{
+#red{
     background-color: #819ff9;
 }
-#box2{
+#yellow{
     background-color: #d95980;
 }
-#box3{
+#purple{
     background-color: #f99b45;
 }
-#box4{
+#green{
     background-color: #63aac0;
 }
 
-.flash{
-    background-color: #fff;
+/* .gameFlash{
+    background-color: yellow !important;
+} */
+
+#red.gameFlash, #yellow.gameFlash, #purple.gameFlash, #green.gameFlash {
+    background-color: yellow !important;
+}
+
+#red.userFlash, #yellow.userFlash, #purple.userFlash, #green.userFlash {
+    background-color: green;
 }
