--- a/Backened3/EJSdir/views/home.ejs
+++ b/Backened3/EJSdir/views/home.ejs
@@ -8,7 +8,7 @@
 <body>
     <h1>This is a home page</h1>
     <h3><%= 1 + 2 %></h3> // ejs embbeded JS
-    <h3><%= ["heelo" , "Utkarsh"].[0] %></h3> // ejs embbeded JS
+    <h3><%= ["heelo" , "Utkarsh"][0] %></h3> // ejs embbeded JS
     <p>Lorem ipsumOmnisus in.</p>
     <button>click Me</button>
 </body>
