--- a/Backened3/EJSdir/views/instagram.ejs
+++ b/Backened3/EJSdir/views/instagram.ejs
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
+    <style>
+        img{
+            height: 100px;
+            width: 100px;
+        }
+
+    </style>
 </head>
 <body>
     <h1>This page belongs to @<%= data.name  %> </h1>
@@ -12,8 +19,9 @@
     <p>Followers : <%= data.followers %> &nbsp; &nbsp; Following : <%= data.following %> </p>
     <h2>Accounts that follow you :</h2>
     <hr/>
-    <% for(name of followers){ %>
-        <li> <%= name %> </li>
+    <% for(post of data.posts){ %>
+        <img src="<%=post.image%>" alt="Pic of <%= post  %>">
+        <p>Likes : <%= post.likes %> &nbsp; &nbsp; Comments : <%= post.comments %> </p>
     <% } %>
 </body>
 </html>
