--- a/Backened3/EJSdir/views/noAccount.ejs
+++ b/Backened3/EJSdir/views/noAccount.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Account not Found</title>
-</head>
+<%- include("includes/head.ejs")  %>
 <body>
     <h2>Account is not found for @<%= username  %></h2>
 </body>
