--- a/Backened4/REST_CLASS/views/index.ejs
+++ b/Backened4/REST_CLASS/views/index.ejs
@@ -17,7 +17,7 @@
         </div>
     <% } %>
     <br><br>
-    <a href="http://localhost:8080/posts/New">Create a new Post</a>
+    <a href="http://localhost:8080/posts/new">Create a new Post</a>
 </body>
 </html>
 
