--- a/Backened4/REST_CLASS/views/index.ejs
+++ b/Backened4/REST_CLASS/views/index.ejs
@@ -14,6 +14,10 @@
             <h4 class="content"><%= post.content  %></h4>
             <br>
             <a href="http://localhost:8080/posts/<%=post.id%>">See Post in Detail</a>
+            <a href="http://localhost:8080/posts/<%=post.id%>/edit">Edit</a>
+            <form action="/posts/<%=post.id%>?_method=DELETE" method="post">
+                <button>Delete Post</button>
+            </form>
         </div>
     <% } %>
     <br><br>
