--- a/MongoDB/With_Express/views/index.ejs
+++ b/MongoDB/With_Express/views/index.ejs
@@ -4,18 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whatsapp</title>
+    <link rel="stylesheet" href="/style.css"> 
+    <!-- <style>  
+        .chat {  
+            background-color: aliceblue; /* For testing */  
+            color: white; /* For testing */  
+        }  
+    </style> -->
 </head>
 <body>
     <h3>All Chats</h3>
+    <form action="/chats/new" method="get">
+        <button>New Chat</button>
+    </form>
+    <br>
+
     <%for(let chat of chats){%>
         <div class="chat"> <!--We are adding inside div , because we want to give styling. -->
-            <p>From : <%= chat.from %></p>
+            <p>From : <i><%= chat.from %></i></p>
             <div class="msg">
                 <p><%= chat.msg %></p>
+                <form action="/chats/<%= chat._id %>/edit" method="GET">
+                    <button>Edit</button>
+                </form>
+                <br>
+                <form action="/chats/<%= chat._id %>/?_method=DELETE" method="POST">
+                    <button>Delete</button>
+                </form>
             </div>
-            <p>Received by : <%= chat.to %></p>
+            <p>Received by : <i><%= chat.to %></i></p>
+            <br><br>
         </div>
+        <p>Chat Created_at : <%= chat.created_at.toString().split(" ")[4]%> </p><!--split function with separator giving array separated by separator-->
+        <p>Chat Created Date : <%= chat.created_at.toString().split(" ").slice(0 , 4).join("-")%> </p><!--split function with separator giving array separated by separator-->
+        
+        <hr>
     <%}%>
+
+
     
 </body>
 </html>
