Consistency is poer

--- a/AirMojo/views/listings/show.ejs
+++ b/AirMojo/views/listings/show.ejs
@@ -13,6 +13,7 @@
         <li>&#x20B9;<%= listing.price.toLocaleString("en-IN") %></li>
         <li><%= listing.location %></li>
         <li><%= listing.country %></li>
+        <!-- Image iss to be added later -->
     </ul>
 </body>
 </html>
