--- a/AirMojo/views/listings/index.ejs
+++ b/AirMojo/views/listings/index.ejs
@@ -6,6 +6,9 @@
     <title>AirMojo</title>
 </head>
 <body>
+    <form action="/listings/new" method="get">
+        <button>Create New Listing</button>
+    </form>
     <ul>
         <%for(let listing of allListings){  %>
             <li><a href="listings/<%= listing._id %>"><%= listing.title %>  </a></li>  
