--- a/AirMojo/views/listings/show.ejs
+++ b/AirMojo/views/listings/show.ejs
@@ -15,5 +15,11 @@
         <li><%= listing.country %></li>
         <!-- Image iss to be added later -->
     </ul>
+    <br>
+    <a href="/listings/<%= listing._id%>/edit">Edit this listing</a>
+    <br><br>
+    <form action="/listings/<%= listing._id %>?_method=DELETE" method="post">
+        <button>Delete this Listing</button>
+    </form>
 </body>
 </html>
