--- a/AirMojo/views/listings/edit.ejs
+++ b/AirMojo/views/listings/edit.ejs
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<%- layout("/layouts/boilerplate") %>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirMojo</title>
-</head>
+</head> -->
 <body>
     <h3>Edit your List : </h3>
     <form action="/listings/<%=listing._id%>?_method=PUT" method="post">
@@ -28,4 +29,4 @@
         <br>
     </form>
 </body>
-</html>
+<!-- </html> -->
