--- a/AirMojo/views/listings/index.ejs
+++ b/AirMojo/views/listings/index.ejs
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+<%- layout("/layouts/boilerplate") %>
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirMojo</title>
-</head>
+</head> -->
 <body>
     <form action="/listings/new" method="get">
         <button>Create New Listing</button>
@@ -16,4 +18,4 @@
     </ul>
     
 </body>
-</html>
+<!-- </html> -->
