--- a/AirMojo/views/listings/show.ejs
+++ b/AirMojo/views/listings/show.ejs
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<%- layout("/layouts/boilerplate") %>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirMojo</title>
-</head>
+</head> -->
 <body>
     <h3>Listing Details :</h3>
     <ul>
@@ -22,4 +23,4 @@
         <button>Delete this Listing</button>
     </form>
 </body>
-</html>
+<!-- </html> -->
