--- a/AirMojo/views/includes/footer.ejs
+++ b/AirMojo/views/includes/footer.ejs
@@ -6,7 +6,7 @@
             <i class="fa-brands fa-linkedin"></i>
 
         </div>
-        <div> &copy; AirMojo Private Limited</div>
+        <div class="f-info-brand"> &copy; AirMojo Private Limited</div>
         <div class="f-info-links">
             <a href="/privacy">Privacy</a> <!-- Custom subpages Will be added with time. -->
             <a href="/terms">Terms</a> <!-- Custom subpages Will be added with time. -->
