--- a/AirMojo/views/listings/index.ejs
+++ b/AirMojo/views/listings/index.ejs
@@ -8,15 +8,30 @@
     <title>AirMojo</title>
 </head> -->
 <body>
+    <h3>All Listings</h3>
     <!-- <form action="/listings/new" method="get">
         <button>Create New Listing</button>
     </form> -->
-    <ul>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <%for(let listing of allListings){  %>
-            <li><a href="listings/<%= listing._id %>"><%= listing.title %>  </a></li>  
-            <li><a href="listings/<%= listing._id %>"><%= listing.title %>  </a></li>  
+            <div class="card col" style="width: 20rem;">
+                <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image">
+                <div class="card-body">
+                    <p class="card-text">
+                        <%= listing.title %> <br>
+                        &#x20B9; <%= listing.price.toLocaleString("en-In") %> / night
+                    </p> 
+                    
+                </div>
+            </div>
         <% } %>
-    </ul>
+    </div>
+
+    <!-- <ul>
+        <%for(let listing of allListings){  %> 
+             <li><a href="listings/<%= listing._id %>"><%= listing.title %>  </a></li>   
+         <% } %> 
+     </ul> --> 
     
 </body>
 <!-- </html> -->
