--- a/AirMojo/views/listings/index.ejs
+++ b/AirMojo/views/listings/index.ejs
@@ -14,16 +14,19 @@
     </form> -->
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <%for(let listing of allListings){  %>
-            <div class="card col" style="width: 20rem;">
-                <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image">
-                <div class="card-body">
-                    <p class="card-text">
-                        <%= listing.title %> <br>
-                        &#x20B9; <%= listing.price.toLocaleString("en-In") %> / night
-                    </p> 
-                    
-                </div>
-            </div>
+            <a href="/listings/<%= listing._id%>" class="listing-link" >
+                <div class="card col" >
+                    <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
+                    <div class="card-img-overlay"></div>
+                    <div class="card-body">
+                        <p class="card-text">
+                            <b><%= listing.title %></b> <br>
+                            &#x20B9; <%= listing.price.toLocaleString("en-In") %> / night
+                        </p> 
+                        
+                    </div>
+                </div> 
+            </a>
         <% } %>
     </div>
 
