--- a/AirMojo/public/css/style.css
+++ b/AirMojo/public/css/style.css
@@ -1,7 +1,13 @@
 body{
     font-family: "Plus Jakarta Sans", sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
+.container{
+    flex : 1;
+}
 /* Navbar */
 .navbar{
     height: 5rem;
@@ -88,4 +94,16 @@ body{
 .card-img-overlay:hover{
     opacity: 0.2;
     background-color: white;
+}
+
+/* New Page */
+.add-btn{
+    background-color: #fe424d;
+    border: none;
+}
+
+/* Edit Page */
+.edit-btn{
+    background-color: #fe424d;
+    border: none;
 }
