--- a/AirMojo/public/css/style.css
+++ b/AirMojo/public/css/style.css
@@ -107,3 +107,17 @@ body{
     background-color: #fe424d;
     border: none;
 }
+
+/* Show page  */
+.show-img{
+    height: 30vh;
+}
+
+.btns{
+    display: flex;
+}
+
+.show-card{
+   padding-left: 0; 
+   padding-right: 0;
+}
