--- a/AirMojo/views/listings/show.ejs
+++ b/AirMojo/views/listings/show.ejs
@@ -6,21 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirMojo</title>
 </head> -->
-<body>
-    <h3>Listing Details :</h3>
-    <ul>
-        <li><%= listing.title %></li>
-        <li><%= listing.description %></li>
-        <li>&#x20B9;<%= listing.price.toLocaleString("en-IN") %></li>
-        <li><%= listing.location %></li>
-        <li><%= listing.country %></li>
-        <!-- Image iss to be added later -->
-    </ul>
-    <br>
-    <a href="/listings/<%= listing._id%>/edit">Edit this listing</a>
-    <br><br>
-    <form action="/listings/<%= listing._id %>?_method=DELETE" method="post">
-        <button>Delete this Listing</button>
-    </form>
-</body>
+<!-- <body> -->
+    <div class="row mt-3">
+        <div class="col-8 offset-3">
+            <h3>Listing Details :</h3>
+        </div>
+        <div class="card col-6 offset-3 show-card">
+            <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing">
+            <div class="card-body">
+                <p class="card-text">
+                    <b><%= listing.title %></b> <br>
+                    <%= listing.description %> <br>
+                    &#x20B9;<%= listing.price.toLocaleString("en-IN") %> <br>
+                    <%= listing.location %> <br>
+                    <%= listing.country %>
+                </p>
+            </div>
+        </div>
+        
+            <!-- <ul>
+                <li><%= listing.title %></li>
+                <li><%= listing.description %></li>
+                <li>&#x20B9;<%= listing.price.toLocaleString("en-IN") %></li>
+                <li><%= listing.location %></li>
+                <li><%= listing.country %></li>
+                / Image iss to be added later 
+            </ul> -->
+            <br>
+        
+        <div class="btns">
+            
+            <a href="/listings/<%= listing._id%>/edit"  class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+                    
+        
+            <form action="/listings/<%= listing._id %>?_method=DELETE" method="post">
+                <button class="btn btn-dark offset-5">Delete</button>
+            </form>
+            
+        </div>
+        
+    </div>
+
+<!-- </body> -->
 <!-- </html> -->
