--- a/AirMojo/views/listings/edit.ejs
+++ b/AirMojo/views/listings/edit.ejs
@@ -10,22 +10,31 @@
     <div class="row mt-3">
         <div class="col-8 offset-2">
             <h3>Edit your List : </h3>
-            <form action="/listings/<%=listing._id%>?_method=PUT" method="post">
+            <form action="/listings/<%=listing._id%>?_method=PUT" method="post" novalidate class="needs-validation">
                 <!-- Earlier for taking input we are using placeholder to show to enter something, but here we need to show the already present input , so we use value attribut
                 The value attribute sets the default content of an <input> field
                 Useful in Edit Forms to show existing data. -->
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
-                    <input type="text" name="listing[title]" value="<%= listing.title %>" class="form-control">
+                    <input type="text" required name="listing[title]" value="<%= listing.title %>" class="form-control">
+                    <div class="valid-feedback">
+                        Title Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea  name="listing[description]"   rows="4" cols="30" class="form-control"><%= listing.description %></textarea>
+                    <textarea required name="listing[description]"   rows="4" cols="30" class="form-control"><%= listing.description %></textarea>
+                    <div class="invalid-feedback">
+                        Please Enter a short description
+                      </div>
                 </div>
                 <div class="mb-3">
                     <label for="image" class="form-label">Image Link</label>
-                    <input type="text" name="listing[image][url]" value="<%= listing.image.url %>" class="form-control" >
-                </div>
+                    <input type="text" required name="listing[image][url]" value="<%= listing.image.url %>" class="form-control" >
+                    <div class="invalid-feedback">
+                        Please enter a valid link for Image
+                    </div>
+                </div> 
                 <div class="mb-3">
                     <label for="filename" class="form-label">Image Filename</label>
                     <input type="text" name="listing[image][filename]" value="<%= listing.image.filename %>" class="form-control">
@@ -33,21 +42,34 @@
                 <div class="row">
                     <div class="mb-3 col-md-4">
                         <label for="price" class="form-label">Price</label>
-                        <input type="number" name="listing[price]" value="<%= listing.price %>" class="form-control">
+                        <input type="number" required name="listing[price]" value="<%= listing.price %>" class="form-control">
+                        <div class="invalid-feedback">
+                            Please enter a valid Price
+                          </div>
                     </div>
                     <div class="mb-3 col-md-8">
                         <label for="country" class="form-label">Country</label>
-                        <input type="text" name="listing[country]" value="<%= listing.country %>" class="form-control">
+                        <input type="text" required name="listing[country]" value="<%= listing.country %>" class="form-control">
+                        <div class="invalid-feedback">
+                            Country name should be valid
+                          </div>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="location" class="form-label"></label>
-                    <input type="text" name="listing[location]" value="<%= listing.location %>" class="form-control">
-                </div>
+                    <input type="text" required name="listing[location]" value="<%= listing.location %>" class="form-control">
+                    <div class="invalid-feedback">
+                        Location should be valid
+                    </div>
+                </div> 
                 <button class="btn btn-dark edit-btn mt-3">Edit</button>
                 <br>
             </form>
         </div>
     </div>
+
+    <script src="/js/script.js"></script>
 <!-- </body> -->
 <!-- </html> -->
+
+
