--- a/AirMojo/views/listings/new.ejs
+++ b/AirMojo/views/listings/new.ejs
@@ -10,16 +10,22 @@
     <div class="row mt-3">  
         <div class="col-8 offset-2">  
             <br><br> 
-          <h3>Create a new List :</h3>  
-          <form action="/listings" method="post">  
+          <h3>Create a new Listing</h3>  
+          <form action="/listings" method="post" novalidate class="needs-validation">  
             <div class="mb-3">  
               <label for="title" class="form-label">Title</label>  
-              <input placeholder="Add a catchy title" type="text" class="form-control" name="listing[title]">  
+              <input placeholder="Add a catchy title" type="text" class="form-control" name="listing[title]" required>  
+              <div class="valid-feedback">
+                Title Looks good!
+              </div>
             </div>  
             
             <div class="mb-3">  
               <label for="description" class="form-label">Description</label>  
-              <textarea name="listing[description]" class="form-control" rows="4" cols="10"></textarea>  
+              <textarea name="listing[description]" class="form-control" rows="4" cols="10" required></textarea>  
+              <div class="invalid-feedback">
+                Please Enter a short description
+              </div>
             </div>  
             
             <div class="mb-3">  
@@ -35,18 +41,27 @@
             <div class="row">
                 <div class="mb-3 col-md-4">  
                     <label for="price" class="form-label">Price</label>  
-                    <input type="number" name="listing[price]" class="form-control" placeholder="1200">  
+                    <input type="number" name="listing[price]" class="form-control" required placeholder="1200">  
+                    <div class="invalid-feedback">
+                      Please enter a valid Price
+                    </div>
                   </div>  
                   
                   <div class="mb-3 col-md-8" >  <!--This means md ke baad 4 : 8 ka ratio rhe.-->
                     <label for="country" class="form-label">Country</label>  
-                    <input type="text" name="listing[country]" class="form-control" placeholder="India">  
+                    <input type="text" name="listing[country]" class="form-control" required placeholder="India">  
+                    <div class="invalid-feedback">
+                      Country name should be valid
+                    </div>
                   </div> 
             </div> 
             
             <div class="mb-3">  
               <label for="location" class="form-label">Location</label>  
-              <input type="text" name="listing[location]" class="form-control" placeholder="Kanpur , Uttar-Pradesh">  
+              <input type="text" name="listing[location]" required class="form-control" placeholder="Kanpur , Uttar-Pradesh">  
+              <div class="invalid-feedback">
+                Location should be valid
+              </div>
             </div>  
             
               
