Default Error Page is created

--- a/AirMojo/views/listings/new.ejs
+++ b/AirMojo/views/listings/new.ejs
@@ -41,6 +41,7 @@
             <div class="row">
                 <div class="mb-3 col-md-4">  
                     <label for="price" class="form-label">Price</label>  
+                    <!--testing:-  <input  name="listing[price]" class="form-control" required placeholder="1200">   -->
                     <input type="number" name="listing[price]" class="form-control" required placeholder="1200">  
                     <div class="invalid-feedback">
                       Please enter a valid Price
