--- a/AirMojo/views/listings/show.ejs
+++ b/AirMojo/views/listings/show.ejs
@@ -9,13 +9,13 @@
 <!-- <body> -->
     <div class="row mt-3">
         <div class="col-8 offset-3">
-            <h3>Listing Details :</h3>
+            <h3><%= listing.title %></h3>
         </div>
         <div class="card col-6 offset-3 show-card">
             <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing">
             <div class="card-body">
                 <p class="card-text">
-                    <b><%= listing.title %></b> <br>
+                    <!-- <b><%= listing.title %></b> <br> -->
                     <%= listing.description %> <br>
                     &#x20B9;<%= listing.price.toLocaleString("en-IN") %> <br>
                     <%= listing.location %> <br>
@@ -34,16 +34,32 @@
             </ul> -->
             <br>
         
-        <div class="btns">
-            
-            <a href="/listings/<%= listing._id%>/edit"  class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-                    
-        
+        <div class="btns">   
+            <a href="/listings/<%= listing._id%>/edit"  class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>       
             <form action="/listings/<%= listing._id %>?_method=DELETE" method="post">
                 <button class="btn btn-dark offset-5">Delete</button>
             </form>
-            
         </div>
+
+        <div class="col-8 offset-3 mb-3">
+            <hr>
+            <h4>Leave a Review</h4>
+            <form action="/listings/<%= listing._id%>/reviews" method="post" novalidate class="needs-validation">
+                <div class="mb-3 mt-3">
+                    <label for="rating" class="form-label">Rating</label>
+                    <input type="range" min="1" max="5" step="1" id="rating" name="review[rating]" class="form-range">
+                </div>
+                <div class="mb-3 mt-3">
+                    <label for="comment" class="form-label">Comments</label>
+                    <textarea cols="30" rows="5" id="comment" name="review[comment]" class="form-control" required></textarea> 
+                    <div class="invalid-feedback">
+                        Please submit some comments for review
+                    </div>
+                </div>
+                <button class="btn btn-outline-dark">Submit</button>
+            </form>
+        </div>
+
         
     </div>
 
