--- a/AirMojo/views/layouts/boilerplate.ejs
+++ b/AirMojo/views/layouts/boilerplate.ejs
@@ -14,7 +14,10 @@
 <body>
     <!-- <h1>AirMojo</h1> -->
     <%- include("../includes/navbar.ejs") %>
-    <div class="container"><%- body %></div>
+    <div class="container">
+        <%- include("../includes/flash.ejs") %>
+        <%- body %>
+    </div>
 
 
 
