Dismiss btn bug corrected

--- a/AirMojo/views/includes/flash.ejs
+++ b/AirMojo/views/includes/flash.ejs
@@ -1,12 +1,12 @@
 <% if(success && success.length ){ %> <!-- success is an array . On console.log we get to know about it.-->
     <div class="alert col-6 offset-3 alert-success alert-dismissible fade show" role="alert">
         <%= success %>
-        <button type="button" class="btn-class" data-bs-dismiss="alert" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% } %>
 <% if(error && error.length ){ %> <!-- success is an array . On console.log we get to know about it.-->
     <div class="alert col-6 offset-3 alert-danger alert-dismissible fade show" role="alert">
         <%= error %>
-        <button type="button" class="btn-class" data-bs-dismiss="alert" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% } %>
