--- a/AirMojo/views/listings/new.ejs
+++ b/AirMojo/views/listings/new.ejs
@@ -11,7 +11,7 @@
         <div class="col-8 offset-2">  
             <br><br> 
           <h3>Create a new Listing</h3>  
-          <form action="/listings" method="post" novalidate class="needs-validation">  
+          <form action="/listings" method="post" novalidate class="needs-validation" enctype="multipart/form-data">  
             <div class="mb-3">  
               <label for="title" class="form-label">Title</label>  
               <input placeholder="Add a catchy title" type="text" class="form-control" name="listing[title]" required>  
@@ -28,9 +28,13 @@
               </div>
             </div>  
             
-            <div class="mb-3">  
+            <!-- <div class="mb-3">  
               <label for="image" class="form-label">Image Link</label>  
               <input type="text" name="listing[image][url]" class="form-control" placeholder="enter image URL/Link">  
+            </div>   -->
+            <div class="mb-3">  
+              <label for="image" class="form-label">Upload Listing Image</label>  
+              <input type="file" name="listing[image][url]" class="form-control" placeholder="enter image URL/Link">  
             </div>  
             
             <div class="mb-3">  
