--- a/AirMojo/views/listings/new.ejs
+++ b/AirMojo/views/listings/new.ejs
@@ -34,7 +34,7 @@
             </div>   -->
             <div class="mb-3">  
               <label for="image" class="form-label">Upload Listing Image</label>  
-              <input type="file" name="listing[image][url]" class="form-control" placeholder="enter image URL/Link">  
+              <input type="file" name="listing[image][url]" class="form-control" required placeholder="enter image URL/Link">  
             </div>  
             
             <div class="mb-3">  
